# stratatools

./: .gitignore  AGENTS.md  LICENSE  README.md  bootstrap.local.env.example  pyproject.toml
.opencode/skills/strata-bootstrap/: SKILL.md
.opencode/skills/strata-monofs/: SKILL.md
.opencode/skills/strata-partition/: SKILL.md
deploy/bootstrap/: bootstrap.yaml
deploy/bootstrap/guardian/: deploy-buildkitd.yaml  deploy-guardiand.yaml  deploy-local-registry.yaml  deploy-pusher-aws.yaml  deploy-pusher-k8s.yaml  namespace.yaml  rbac.yaml  secret.yaml  (+4 more)
docs/: USAGE.md
images/dev-workspace-vscode/: Dockerfile  entrypoint.sh
partitions/_template/: README.md  config.yaml
partitions/agent/: config.yaml
partitions/dev-workspace/: config.yaml  default-sa-cluster-admin.yaml
partitions/doctor/: config.yaml
partitions/guardian-configs/: config.yaml  guardian-configs-sa-cluster-admin.yaml
partitions/k8s-top/: config.yaml  metrics-reader-rbac-default-sa.yaml
partitions/lb-edge/: config.yaml
partitions/lolipop/: README.md  config.yaml  edge-register.yaml
partitions/monitoring/: README.md  config.yaml
partitions/monofs/: config.yaml
partitions/opentelemetry/: collector-prometheus-rbac-default-sa.yaml  config.yaml
src/stratatools/: __init__.py  __main__.py  cli.py  discovery.protoset  monofs_key.py  util.py
tests/: test_bootstrap_devdns.py  test_bootstrap_external_service_ip.py  test_bootstrap_image_pull_policy.py  test_bootstrap_load_images.py  test_bootstrap_port_forward.py  test_image_distribution.py  test_image_prepare.py  test_setup.py
(+624 files in other folders)
