[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratatools"
version = "0.1.0"
description = "Python port of the ainfra scripts/ toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "radryc" }]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6",
]

[project.scripts]
stratatools = "stratatools.cli:app"
st-bootstrap = "stratatools.bootstrap:app"
st-dogfood = "stratatools.dogfood:app"
st-release = "stratatools.release:app"
st-image = "stratatools.image:app"
st-setup = "stratatools.setup:app"
st-aws-setup = "stratatools.aws_setup:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stratatools"]

[tool.hatch.build.targets.wheel.force-include]
"src/stratatools/templates" = "stratatools/templates"
